# Chees

./: CMakeLists.txt  LICENSE  front.cpp  front.h
src/board/: board.cpp  board.h
src/pawns/: IPiece.cpp  IPiece.h  IPiece.hpp  bishop.cpp  bishop.hpp  fool.cpp  fool.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
src/pieces/: Piece.h
src/tests/: main.cpp
